# QA-App-API

./: .gitignore  Makefile  README.md  app.py  login.py  model.py  posts.py  pyproject.toml  register.py  users.py
db/: posts.json  users.json
src/: app.py  login.py  posts.py  users.py
src/db/: posts.json  users.json
src/model/: model.py  token.py
src/routes/: answers.py  login.py  posts.py  users.py
src/views/: login.py  posts.py  users.py
tests/: test_answers.py  test_api.py  test_helper.py  test_login.py  test_posts.py  test_users.py
