[tool.poetry]
name = "QA-API"
version = "0.1.0"
description = ""
authors = ["Rhuan <rhuanlopes536@gmail.com>"]
readme = "README.md"
packages = [{include = "api_com_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
