[tool.poetry]
name = "QA-API"
version = "0.1.0"
description = ""
authors = ["Rhuan <rhuanlopes536@gmail.com>"]
readme = "README.md"
packages = [{include = "api_com_python"}]

[tool.poetry.dependencies]
python = "^3.10"
flask="2.2.2"
flask-cors="3.0.10"
httpx="0.23.1"

[tool.poetry.dev-dependencies]
pytest="7.2.0"
blue="0.9.1"
prospector="1.7.7"

[tool.poetry.group.dev.dependencies]
pyclean = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
